--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,11 +1,9 @@
 .btn {
   background-color: var(--color-orange) -webkit-linear-gradient(0deg, rgba(253, 129, 6, 1));
-  /* border-color: var(--color-orange); */
   padding: 1.6rem 3.2rem;
   border: none;
   color: var(--color-white);
   display: inline-block;
-  /* text-transform: uppercase; */
   font-weight: 400;
   position: relative;
   -webkit-transition: all 0.3s ease 0s;
@@ -84,7 +82,6 @@ h6 {
 }
 
 p {
-  /* --font-family: 'Sansation- light', sans-serif; */
   --font-size: 13px;
   --font-weight: 300;
   font-family: "sansation light";
@@ -108,11 +105,6 @@ body {
 
 /* NAVBAR */
 
-/* .navbar-brand {
-  width: 94px;
-  height: 74px;
-} */
-
 .dropdown-custom {
   z-index: 99;
 }
@@ -129,13 +121,6 @@ body {
   box-shadow: none !important;
 }
 
-/* a.dropdown-item.active,
-a.dropdown-item:active,
-a.dropdown-item:focus {
-  background-color: var(--color-orange);
-  outline: none;
-} */
-
 a.dropdown-item {
   transition: color 0.2s ease, background-color 0.2s ease;
 }
@@ -151,8 +136,6 @@ a.dropdown-item.active {
 }
 
 .custom-navbar {
-  /* overflow: hidden; */
-  /* color: rgba(255, 255, 255, 0.7); */
   background-color: var(--color-white);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
   backdrop-filter: blur(4px);
@@ -161,7 +144,6 @@ a.dropdown-item.active {
   /* margin: 20px 15px 0px 15px; */
   margin: 20px 6px 0px 6px;
 
-  /* REMOVE IF NOT NEEDED */
   transform: translateY(0);
   transition: transform 0.3s ease-in-out;
 }
@@ -208,38 +190,8 @@ a.dropdown-item.active {
   color: var(--color-light-blue) !important;
 }
 
-/* .nav-link::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0%;
-  height: 2px;
-  background-color: var(--color-navy-blue);
-  transition: width 0.3s ease-in-out;
-} */
-
-/* .nav-link:hover::after {
-  width: 100%;
-} */
-
-@media (max-width:768px) {
-  /* .navbar-brand {
-    padding-left: 90px;
-  }
-
-  .navbar-collapse {
-    padding-right: 100px;
-  } */
-
-  /* .navbar-collapse {
-    text-align: center;
-  } */
-}
-
 @media (max-width:992px) {
   .custom-navbar {
-    /* border-radius: 0px 0px 0px 0px; */
     margin: 0px 0px 0px 0px;
   }
 
@@ -252,11 +204,226 @@ a.dropdown-item.active {
   }
 }
 
+/* NEW NAVBAR */
+
+.new-navbar-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: calc(100% - 12px);
+  margin: 20px 6px 0px 6px;
+  border-radius: 60px 0px 60px 0px;
+  z-index: 1000;
+  overflow: hidden;
+}
+
+.new-navbar-top,
+.new-navbar-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+/* Top Part */
+.new-navbar-top {
+  background-color: var(--color-white);
+  height: 66%;
+
+  justify-content: space-between;
+}
+
+/* .new-navbar-logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+} */
+
+.new-navbar-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+
+  margin-left: auto;
+}
+
+.new-navbar-links li {
+  display: inline;
+}
+
+.new-navbar-links a {
+  text-decoration: none;
+  color: var(--color-navy-blue);
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.new-navbar-links a.active {
+  color: var(--color-light-blue);
+}
+
+/* Bottom Part */
+.new-navbar-bottom {
+  background-color: var(--color-navy-blue);
+  color: var(--color-white);
+  height: 33%;
+}
+
+.new-navbar-contact {
+  font-size: 0.9rem;
+}
+
+.new-navbar-social-icons {
+  display: flex;
+  /* padding-right: 14px; */
+  gap: 18px;
+}
+
+.new-navbar-social-icons i {
+  font-size: 1.2rem;
+  color: white;
+  transition: color 0.3s ease;
+}
+
+.new-navbar-social-icons i:hover {
+  color: var(--color-light-blue);
+}
+
+.new-navbar-social-icons-2 {
+  /* display: flex; */
+  display: none;
+  gap: 18px;
+
+  margin-left: auto;
+}
+
+.new-navbar-social-icons-2 i {
+  font-size: 1rem;
+  color: var(--color-navy-blue);
+
+  /* border: 1px solid rgb(215, 215, 215); */
+  border: 1px solid rgba(0, 162, 212, 0.5);
+  border-radius: 50%;
+  padding: 4px 7px 4px 7px;
+  /* margin: 10px; */
+}
+
+.new-navbar-contact-us-btn {
+  /* color: var(--color-navy-blue) !important; */
+  color: var(--color-navy-blue) !important;
+  background-color: #FD81061F;
+  border: 1px solid var(--color-orange);
+  border-radius: 5px;
+  padding: 6px 12px 6px 12px;
+}
+
+.new-navbar-toggler {
+  display: none;
+}
+
+.new-navbar-toggler>i {
+  font-size: 1.4rem;
+  color: var(--color-navy-blue);
+}
+
+/* Dropdown */
+.new-navbar-dropdown {
+  display: none;
+  position: fixed;
+  top: 100px;
+  /* right: 10px; */
+  background-color: white;
+  /* border: 1px solid #ccc; */
+  border-radius: 10px;
+  /* padding: 15px; */
+  width: calc(100% - 12px);
+  margin: 0px 6px 0px 6px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+/* .new-navbar-dropdown.show {
+  opacity: 1;
+} */
+
+.new-navbar-dropdown-links {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.new-navbar-dropdown-links li {
+  /* padding: 10px 0; */
+  /* border-bottom: 1px solid var(--color-light-blue); */
+  border-bottom: 1px solid rgb(212, 212, 212);
+}
+
+.new-navbar-dropdown-links li:last-child {
+  border-bottom: none;
+}
+
+.new-navbar-dropdown-links li a {
+  text-decoration: none;
+  color: var(--color-navy-blue);
+  display: block;
+  padding: 8px;
+  /* border-radius: 10px 10px 0px 0px; */
+}
+
+.new-navbar-dropdown-links li a.active {
+  background-color: var(--color-light-blue);
+  color: var(--color-white);
+}
+
+/* Responsive Styles for smaller screens */
+@media (max-width: 992px) {
+  .new-navbar-container {
+    margin-top: 6px;
+  }
+
+  .new-navbar-top,
+  .new-navbar-bottom {
+    height: auto;
+    justify-content: space-between;
+  }
+
+  .new-navbar-top {
+    background-color: white;
+  }
+
+  .new-navbar-links {
+    display: none;
+  }
+
+  .new-navbar-toggler {
+    display: inline-block;
+    cursor: pointer;
+    /* font-size: 24px; */
+  }
+
+  .new-navbar-toggler.active+.new-navbar-links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+  .new-navbar-bottom {
+    display: none;
+    /* justify-content: space-between; */
+    /* background-color: white; */
+    /* color: black; */
+  }
+
+  .new-navbar-social-icons-2 {
+    display: block;
+  }
+}
+
 /* CAROUSEL */
 
 .carousel-item {
   position: relative;
-  /* height: 100vh; */
   min-height: 400px;
   display: flex;
   align-items: center;
@@ -268,7 +435,6 @@ a.dropdown-item.active {
   height: 100vh;
 }
 
-/* added later */
 .carousel-item img {
   object-fit: cover;
   width: 100%;
@@ -276,21 +442,14 @@ a.dropdown-item.active {
 }
 
 @media (max-width: 992px) {
-  /* .carousel-item {
-    height: 80vh;
-  } */
-
   .carousel-item-custom-height {
     height: 80vh;
   }
 }
 
-/* ADDED LATER */
 @media (max-width: 768px) {
   .carousel-caption {
     font-size: 1rem;
-    /* transform: none; */
-    /* background-color: rgba(0, 0, 0, 0.5); */
     padding: 10px;
     border-radius: 5px;
   }
@@ -303,43 +462,6 @@ a.dropdown-item.active {
     font-size: 0.75rem;
   }
 }
-
-/* @media (min-width: 768px) {
-  .carousel-caption h1 {
-    font-size: 3rem;
-  }
-
-  .carousel-caption p {
-    font-size: 1.25rem;
-  }
-} */
-
-/* @media (min-width: 1200px) {
-  .carousel-caption h1 {
-    font-size: 4rem;
-  }
-
-  .carousel-caption p {
-    font-size: 1.5rem;
-  }
-} */
-
-/* @keyframes custom-animation {
-  0% {
-    opacity: 0;
-    transform: translateY(100%) scale(0.8) rotate(-10deg);
-  }
-
-  50% {
-    opacity: 0.5;
-    transform: translateY(50%) scale(1) rotate(0deg);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0) scale(1) rotate(0deg);
-  }
-} */
 
 @keyframes custom-animation {
   0% {
@@ -356,16 +478,12 @@ a.dropdown-item.active {
 .carousel-caption {
   position: relative;
   top: 40%;
-  /* width: 100%; */
   z-index: 2;
   text-align: justify;
   padding: 1rem;
   border-radius: 10px;
-  /* transform: translateY(-100%); */
-  /* animation: custom-animation 1s forwards; */
   animation: custom-animation 1s ease-out forwards;
   max-width: 100vw;
-  /* background-color: rgba(0, 0, 0, 0.5); */
   height: 40vh;
 }
 
@@ -376,14 +494,9 @@ a.dropdown-item.active {
 
 .carousel-caption h2 {
   font-size: 28px;
-  /* padding-right: 180px; */
-  /* font-family: "sansation"; */
-  /* text-align: center; */
 }
 
 .carousel-caption>p {
-  /* font-size: 16px; */
-  /* padding-right: 180px; */
   font-size: 1.2rem;
   font-weight: 600;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
@@ -420,12 +533,10 @@ a.dropdown-item.active {
   }
 
   .card {
-    /* height: 50vh !important; */
     align-items: center;
   }
 
   .our-services-top-card {
-    /* padding-left: 30px !important; */
     transform: translateY(0px);
     padding-top: 14px;
   }
@@ -433,14 +544,9 @@ a.dropdown-item.active {
 
 @media (max-width: 768px) {
   .our-services-top-card {
-    /* padding-right: 35px !important; */
     flex-direction: column !important;
     align-items: center;
   }
-
-  /* .our-services {
-    transform: translateY(-200px) !important;
-  } */
 }
 
 @media (min-width: 768px) and (max-width: 819px) {
@@ -467,7 +573,6 @@ a.dropdown-item.active {
 
 .about-us {
   background-color: var(--color-light-peach);
-  /* padding-top: 65px; */
 }
 
 .about-card-content {
@@ -478,23 +583,13 @@ a.dropdown-item.active {
 .box-a,
 .box- {
   padding: 15px;
-  /* border: 1px solid #ddd; */
   border-radius: 5px;
-  /* background-color: #f8f9fa; */
   height: 100%;
 }
-
-/* .about-card-title {
-  margin-top: 15px;
-} */
 
 .about-card-text {
   margin-top: 10px;
 }
-
-/* .p-content {
-  margin-top: 15px;
-} */
 
 .box-a {
   display: flex;
@@ -513,16 +608,6 @@ a.dropdown-item.active {
 .box-a p {
   margin: 0;
   padding: 10px;
-}
-
-@media (max-width:430px) {
-  /* .text-start { */
-  /* padding-top: 270px !important; */
-  /* } */
-
-  /* .p-content {
-    margin-bottom: 5px !important;
-  } */
 }
 
 @media (min-width: 768px) {
@@ -556,11 +641,6 @@ a.dropdown-item.active {
   font-weight: 300;
   font-size: 14px;
 }
-
-/* .container {
-  max-width: 1200px;
-  width: 95%;
-} */
 
 .slider-wrapper {
   position: relative;
@@ -675,29 +755,21 @@ a.dropdown-item.active {
 
 .our-skill {
   background-color: var(--color-navy-blue);
-  /* padding-bottom: 170px; */
 }
-
-/* .our-services-content {
-  padding-top: 120px;
-} */
 
 .content-our-skill {
   text-align: center;
-  /* padding-top: 80px; */
 }
 
 .content-our-skill h2 {
   font-weight: 700;
   font-size: 30px;
-  /* font-family: var(--font-family); */
   color: var(--color-white);
 }
 
 .content-our-skill p {
   font-weight: 300;
   font-size: 14px;
-  /* font-family: 'Sansation Light', sans-serif; */
   color: var(--color-white)
 }
 
@@ -706,8 +778,6 @@ a.dropdown-item.active {
 }
 
 .box-our-skill {
-  /* height: 192px; */
-  /* width: 100%; */
   margin-bottom: 20px;
 }
 
@@ -716,32 +786,16 @@ a.dropdown-item.active {
   align-items: center;
 }
 
-/* .circle {
-  width: 134px;
-  height: 134px;
-  border-radius: 50%;
-  background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-} */
-
-
 .circle {
   border: 2px solid var(--color-white-transparent);
   width: 8rem;
   height: 8rem;
-  /* background: radial-gradient(circle, rgba(255, 255, 255, 0.3) 50%, rgba(255, 255, 255, 0) 100%); */
   background: radial-gradient(circle at top left, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
 
   display: inline-block;
-  /* border-radius: 56% 44% 70% 30% / 30% 54% 46% 70%; */
   border-radius: 50%;
   padding: 1.4rem 1.8rem;
   position: relative;
-  /* color: var(--heading); */
-  /* animation: water-wave 3s linear infinite; */
 }
 
 .circle::after {
@@ -752,12 +806,9 @@ a.dropdown-item.active {
   transform: translate(-50%, -50%);
   width: 90%;
   height: 90%;
-  /* border-radius: 56% 44% 70% 30% / 30% 54% 46% 70%; */
   border-radius: 50%;
   background-color: transparent;
-  /* animation: water-wave 5s linear infinite alternate; */
 }
-
 
 @keyframes water-wave {
   0% {
@@ -781,23 +832,17 @@ a.dropdown-item.active {
   color: var(--color-white);
   font-weight: 600;
   font-size: 30px;
-  /* font-weight: 700; */
-  /* font-size: 35px; */
-  /* text-shadow: 2px 2px 4px #000000; */
 }
 
 .skill-counting-content {
-  /* font-size: 30px; */
   font-size: 24px;
   font-weight: 300;
   color: var(--color-white);
-  /* font-family: var(--font-family); */
   padding-top: 20px;
 }
 
 @media (max-width: 768px) {
   .box-our-skill {
-    /* margin-bottom: 20px; */
     padding-top: 20px;
   }
 
@@ -806,7 +851,6 @@ a.dropdown-item.active {
   }
 
   .circle img {
-    /* width: 100px; */
     width: 80px;
     height: auto;
   }
@@ -816,19 +860,6 @@ a.dropdown-item.active {
 
 .our-services {
   background-color: var(--color-light-peach);
-  /* background-image: url(/assets/images/our-services-icon-img/Group\ 28.png); */
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
-  /* background-position: center; */
-  /* transform: translateY(-200px); */
-  /* padding: 60px 0; */
-}
-
-@media (max-width: 768px) {
-  /* .our-services {
-    transform: translateY(-50px);
-    padding: 30px 0;
-  } */
 }
 
 .our-services-img-bg {
@@ -839,8 +870,6 @@ a.dropdown-item.active {
 
 .our-services-content {
   text-align: center;
-  /* margin-bottom: 40px; */
-  /* padding-top: 180px; */
 }
 
 .box-services {
@@ -850,7 +879,6 @@ a.dropdown-item.active {
   background: var(--color-white);
   border-radius: 10px;
   cursor: pointer;
-  /* transition: transform 0.3s; */
 }
 
 @media (max-width: 768px) {
@@ -862,8 +890,6 @@ a.dropdown-item.active {
 .box-services img {
   width: 40px;
   margin-bottom: 20px;
-  /* height: 38px; */
-  /* width: 38px; */
 }
 
 .box-services h2 {
@@ -876,24 +902,10 @@ a.dropdown-item.active {
   color: #666;
 }
 
-/* .box-services:hover {
-  transform: translateY(-10px);
-} */
-
-/* TRADING PORTFOLIO */
-
-/* .our-services { */
-/* background-color: rgba(255, 224, 193, 1); */
-/* } */
-
 .serivices-img {
   height: 40vh;
   width: 99vw;
 }
-
-/* .box-services {
-  background-color: rgba(255, 224, 193, 1) !important;
-} */
 
 .box-services h2 {
   text-align: justify;
@@ -904,29 +916,19 @@ a.dropdown-item.active {
 }
 
 .content-trading-portfolio {
-  /* width: 367px; */
-  /* height: 260px; */
   text-align: justify;
   font-size: 16px;
   font-weight: 300;
-  /* padding-top: 50px; */
   text-align: justify;
 }
 
 .icon-trading img {
-  /* background-color: red; */
   padding-bottom: -20px;
 }
-
-/* .box-trading-portfolio {
-  height: 452px;
-  width: 1240px;
-} */
 
 .icon-trading-portfolio {
   display: flex;
   flex-direction: column;
-  /* gap: 45px; */
   align-items: center;
 }
 
@@ -942,20 +944,12 @@ a.dropdown-item.active {
   transition: font-size 0.3s ease;
 }
 
-/* .icon-trading-portfolio {
-  padding-top: 50px;
-} */
-
 .last-img {
   position: absolute;
   z-index: 1;
   right: 0px;
   bottom: 0;
 }
-
-/* .trading-p {
-  margin-top: -230px;
-} */
 
 .trading-portfolio-box {
   background-color: var(--color-light-pink);
@@ -968,15 +962,6 @@ a.dropdown-item.active {
     flex-direction: column;
     align-items: center;
   }
-
-  /* .content-trading-portfolio p {
-    margin-left: -190px;
-    margin-bottom: -200px;
-  } */
-
-  /* .content-trading-portfolio p {
-    width: 600px;
-  } */
 
   .icon-trading-portfolio {
     padding-top: 0px;
@@ -1026,7 +1011,6 @@ a.dropdown-item.active {
 .new-trading-portfolio-box-image img {
   max-width: 100%;
   height: auto;
-  /* border-radius: 5px; */
 }
 
 .new-trading-portfolio-box-btn>img {
@@ -1043,17 +1027,11 @@ a.dropdown-item.active {
 .reach-out {
   background-repeat: no-repeat;
   position: relative;
-  /* transition: all 0.7s linear; */
   background-attachment: scroll;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/home-page-images/reach-out-to-us/reach-out-to-us-img-1.webp); /* Use background-image property */
-
-  /* background: linear-gradient(90deg, #96c1f9 0%, #feb974 49.93%, #ffd3a6 100%,
-      rgba(180, 213, 255, 1) 0%,
-      rgba(255, 193, 131, 1) 49.93%,
-      rgba(255, 224, 193, 1) 100%),
-    url(../images/home-page-images/reach-out-to-us/reach-out-to-us-img.webp); */
+  background-image: url(../images/home-page-images/reach-out-to-us/reach-out-to-us-img-1.webp);
+  /* Use background-image property */
 }
 
 .reach-out p {
@@ -1063,14 +1041,6 @@ a.dropdown-item.active {
 }
 
 .btn-reach {
-  /* border-radius: 8px;
-  background-color: var(--color-orange);
-  border: none;
-  color: var(--color-white);
-  text-align: center;
-  display: inline-block;
-  cursor: pointer; */
-
   font-weight: 500;
   color: var(--color-white);
   background-color: var(--color-orange);
@@ -1081,7 +1051,6 @@ a.dropdown-item.active {
 /* FOOTER */
 
 .footer {
-  /* padding: 10px 0; */
   background-color: var(--color-navy-blue);
 }
 
@@ -1123,10 +1092,6 @@ a.dropdown-item.active {
   border-top: 1px solid var(--color-white);
 }
 
-/* .footer-p-content {
-  margin-top: 2rem;
-} */
-
 .copyright-text {
   font-size: 0.8rem;
 }
@@ -1134,20 +1099,12 @@ a.dropdown-item.active {
 /* RESPONSIVE */
 
 @media (max-width: 768px) {
-  /* .footer {
-    padding: 2rem 0;
-  } */
-
   .col-md-3 {
     flex-basis: 50%;
   }
 }
 
 @media (max-width: 480px) {
-  /* .footer {
-    padding: 1rem 0;
-  } */
-
   .col-md-3 {
     flex-basis: 100%;
   }
@@ -1156,11 +1113,6 @@ a.dropdown-item.active {
 /* MEDIA QUERIES */
 
 @media (max-width: 768px) {
-  /* .p-content {
-    padding-bottom: 100px;
-    margin-bottom: -114px;
-  } */
-
   .skill-counting-content {
     padding-left: 70px;
   }
@@ -1222,35 +1174,18 @@ a.dropdown-item.active {
 
 .footer-icon-container {
   display: flex;
-  /* justify-content: center; */
-  /* gap: 5px; */
   padding: 18px 0px 0px 0px;
 }
 
 .footer-icon-container i {
   font-size: 20px;
   color: var(--color-white);
-  /* background-color: red; */
   border-radius: 50%;
   padding: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* transition: background-color 0.3s ease, color 0.3s ease; */
 }
-
-/* .footer-icon-container i:hover {
-  color: var(--high-dark-color);
-  background-color: var(--white);
-  cursor: pointer;
-} */
-
-/* @media (min-width: 769px) {
-  .footer-icon-container {
-      justify-content: flex-start;
-      padding: 0px;
-  }
-} */
 
 /* Styles for mobile and tablets slider */
 
@@ -1293,10 +1228,6 @@ a.dropdown-item.active {
 /* Overflow in mobile view 375px to 430px */
 
 @media (max-width: 490px) {
-  /* .skill-icon {
-    padding-left: 40px;
-  } */
-
   .content-our-skill {
     padding-right: 10px;
     padding-left: 10px;
@@ -1304,7 +1235,6 @@ a.dropdown-item.active {
   }
 
   .card-img-top {
-    /* width: 100vh; */
     width: 100% !important;
     height: 80vh !important;
   }
@@ -1312,12 +1242,10 @@ a.dropdown-item.active {
   .carousel-caption {
     position: relative;
     top: 30%;
-    /* padding-right: 20px !important; */
   }
 
   .carousel-caption p {
     text-align: justify;
-    /* padding-right: 20px; */
   }
 
   .carousel-caption h2 {
